# hermes-email-workflows

./: .gitignore  GMAIL_PUBSUB_IMPLEMENTATION.md  GOOGLE_CLOUD_PROVISIONING.md  README.md  pyproject.toml
scripts/: install_launchagent.sh  uninstall_launchagent.sh
src/email_workflows/: __init__.py  auth.py  engine.py  gmail.py  google_setup.py  main.py  models.py  notifier.py  rules.py  runner.py  store.py  web.py  worker.py
src/email_workflows/static/: app.css
src/email_workflows/templates/: base.html  dashboard.html  rule_form.html  settings.html
tests/: test_auth.py  test_engine.py  test_gmail.py  test_google_setup.py  test_idempotency.py  test_notifier.py  test_rules.py  test_runner.py  test_store.py  test_web.py  test_worker.py
