[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-email-workflows"
version = "0.1.0"
description = "Local Gmail Pub/Sub workflow dashboard for Hermes Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1",
  "uvicorn[standard]>=0.35,<1",
  "jinja2>=3.1,<4",
  "python-multipart>=0.0.20,<1",
  "google-api-python-client>=2.170,<3",
  "google-auth-oauthlib>=1.2,<2",
  "google-cloud-pubsub>=2.30,<3",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.0,<2",
  "ruff>=0.12,<1",
]

[project.scripts]
hermes-email-workflows = "email_workflows.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/email_workflows"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
